stylus/hero.styl
//
// HERO & HERO TABS
//

TAB_HEIGHT = 33px

.heroImage
  display: block
  height: HERO_HEIGHT
  left: 0
  position: absolute
  top: 0
  width: 100%

.hero
  color: #FFF
  display: block
  text-align: center

  @media PHONE
    font-size: 0.85em
    text-align: center

  a
    {LINK}
      color: #FFF
    {HOVER}
      text-decoration: none

    display: block
    padding-top: 45px
    padding-bottom: 45px
    body.home &
      padding-bottom: 65px
    @media PHONE
      padding: 25px CONTENT_PADDING_PHONE 25px CONTENT_PADDING_PHONE
      body.home &
        padding-top: 40px
        padding-bottom: 40px
    @media TABLET
      padding: 30px CONTENT_PADDING_TABLET 30px CONTENT_PADDING_TABLET
    @media DESKTOP
      padding-left: CONTENT_PADDING_DESKTOP

  .title, .desc
    hero_font()
    margin: 0

  .title
    font-size: 3.2em
    font-weight: bold
    text-shadow: 2px 2px 3px rgba(#000, 0.8)
    @media PHONE
      font-size: 2.8em
    body.home &
      font-size: 4.5em
      @media PHONE
        font-size: 3.5em

  .desc
    font-size: 1.4em
    margin-top: 0.3em
    text-shadow: 1px 1px 2px rgba(#000, 0.8)
    body.home &
      font-size: 2em
    @media PHONE
      display: none

ul.tabs
  height: TAB_HEIGHT
  font-size: 16px
  list-style: none
  margin: 0 0 0 6px

  li
    display: inline-block
    margin-right: 2px
    padding: 0

    a
      {LINK}
        background: rgba(GRAY_LIGHTER,0.9)
        border-bottom: none
        border-radius: 6px 6px 0 0
        box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.1)
        color: GRAY_DARKEST
        display: block
        height: TAB_HEIGHT
        padding: 4px 10px 0 10px
        font-weight: bold

      {HOVER}
        background: rgba(GRAY_LIGHTER,1)
        color: BLUE
        text-decoration: none

    &.on a
      {LINK}
        background: #FFF
        border-bottom: 1px solid #FFF
        box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.2)
        height: TAB_HEIGHT + 1

